--- a/simplyOrganicsAngular/package.json
+++ b/simplyOrganicsAngular/package.json
@@ -21,19 +21,17 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "bootstrap": "4.0.0-beta.2",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14",
     "@types/bootstrap": "^3.3.36",
     "@types/chart.js": "^2.6.5",
     "animate.css": "^3.5.2",
     "autoprefixer": "^7.2.4",
+    "bootstrap": "4.0.0-beta.2",
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap-tagsinput": "^0.7.1",
     "cd-themify-icons": "0.0.1",
     "chart.js": "^2.7.0",
+    "core-js": "^2.4.1",
     "datatables.net-bs4": "^1.10.16",
     "datatables.net-buttons-bs4": "^1.4.2",
     "datatables.net-fixedheader-bs4": "^3.1.3",
@@ -53,8 +51,10 @@
     "peity": "^3.2.1",
     "popper.js": "^1.12.5",
     "raphael": "^2.2.7",
+    "rxjs": "^5.4.2",
     "summernote": "^0.8.8",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.4.6",
