--- a/simplyOrganicsAngular/package.json
+++ b/simplyOrganicsAngular/package.json
@@ -55,10 +55,12 @@
     "rxjs": "^5.5.6",
     "summernote": "^0.8.8",
     "toastr": "^2.1.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "@angular-devkit/core": "^0.0.28",
+    "@angular-devkit/schematics": "^0.0.51"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.6",
+    "@angular/cli": "^1.4.6",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
