--- a/simplyOrganicsAngular/package.json
+++ b/simplyOrganicsAngular/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.0.28",
+    "@angular-devkit/schematics": "^0.0.51",
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
@@ -26,7 +28,7 @@
     "animate.css": "^3.5.2",
     "auth0-js": "^9.0.3",
     "autoprefixer": "^7.2.4",
-    "bootstrap": "4.0.0-beta.2",
+    "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.7.1",
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap-tagsinput": "^0.7.1",
@@ -55,9 +57,7 @@
     "rxjs": "^5.5.6",
     "summernote": "^0.8.8",
     "toastr": "^2.1.2",
-    "zone.js": "^0.8.14",
-    "@angular-devkit/core": "^0.0.28",
-    "@angular-devkit/schematics": "^0.0.51"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "^1.4.6",
