--- a/simplyOrganicsAngular/package.json
+++ b/simplyOrganicsAngular/package.json
@@ -51,6 +51,7 @@
     "metismenu": "^2.7.0",
     "moment": "^2.18.1",
     "morris.js": "^0.5.0",
+    "ng2-file-upload": "^1.3.0",
     "peity": "^3.2.1",
     "popper.js": "^1.12.5",
     "raphael": "^2.2.7",
